[project]
name = "fastapi_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.4.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "uvicorn[standard]>=0.47.0",
]
